--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "ynpx": "npx ynpx --prefer-offline",
     "develop": "yarn ynpx concurrently --kill-others \"yarn run serve:cms\" \"yarn run gatsby develop\"",
     "start": "yarn develop",
-    "build": "yarn run --offline gatsby build --prefix-pathsk",
+    "build": "yarn run --offline gatsby build --prefix-paths",
     "jest": "yarn run --offline ynpx jest --passWithNoTests",
     "test": "yarn run jest",
-    "serve": "gatsby serve",
+    "serve": "yarn run build && yarn run serve:only",
+    "serve:only": "yarn run --offline gatsby serve --prefix-paths",
     "serve:cms": "yarn run ynpx decap-server",
     "clean": "gatsby clean",
     "typecheck": "tsc --noEmit"
@@ -29,6 +30,7 @@
     "gatsby-plugin-mdx": "^5.14.1",
     "gatsby-plugin-sass": "^6.14.0",
     "gatsby-source-filesystem": "^5.14.0",
+    "qr": "^0.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.89.0"
