--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "gatsby-plugin-mdx": "^5.14.1",
     "gatsby-plugin-sass": "^6.14.0",
     "gatsby-source-filesystem": "^5.14.0",
+    "lodash": "^4.17.21",
     "qr": "^0.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rxjs": "^7.8.2",
     "sass": "^1.89.0"
   },
   "devDependencies": {
