--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "98.css": "^0.1.21",
     "@mdx-js/react": "^3.1.0",
     "decap-cms-app": "^3.6.2",
+    "decap-cms-widget-starter": "./libs/decap/decap-cms-widget-starter",
     "gatsby": "^5.14.1",
     "gatsby-plugin-decap-cms": "^4.0.4",
     "gatsby-plugin-manifest": "^5.14.0",
