--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -18,16 +18,12 @@ public_folder: /portfolio/assets
 
 collections:
   - name: curriculum
+    title: Curriculum
     label: Curricula
     label_singular: Curriculum
     folder: src/cms/curriculum
     create: true
     fields:
-      - { name: type, label: Type, widget: hidden, default: 'curriculum' }
-      - { name: title, label: Title }
-      - { name: aboutMe, label: About Me, widget: markdown }
-      - { name: skillsDescription, label: Skill Description, widget: markdown }
-      - { name: skillsByScore, label: Scored Skills, widget: text }
-      - { name: skillsByTime, label: Timed Skills, widget: text }
-      - { name: training, label: Training, widget: markdown }
-      - { name: links, label: Links, widget: markdown }
+      - { name: title, label: Title, widget: string }
+      - { name: hellowidget, label: 'Hello Widget', widget: hello-widget }
+      - { name: mywidget, label: 'My Widget', widget: mywidget }
