--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "concurrently": "^9.1.2",
     "css-loader": "^7.1.2",
     "decap-server": "^3.2.0",
+    "gatsby-plugin-sharp": "^5.14.0",
+    "gatsby-remark-relative-images-v2": "^0.1.5",
+    "gatsby-transformer-remark": "^6.14.0",
     "style-loader": "^4.0.0",
     "typescript": "^5.3.3",
     "ynpx": "^2.1.6"
