--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -25,5 +25,5 @@ collections:
     create: true
     fields:
       - { name: title, label: Title, widget: string }
-      - { name: hellowidget, label: 'Hello Widget', widget: hello-widget }
-      - { name: mywidget, label: 'My Widget', widget: mywidget }
+      - { name: hellowidget, label: 'Hello Widget', widget: hello-widget, required: false }
+      - { name: mywidget, label: 'My Widget', widget: mywidget, required: false }
