--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "qr": "^0.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-remark": "^2.1.0",
     "rxjs": "^7.8.2",
     "sass": "^1.89.0"
   },
